--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script src="/public/jquery.min.js"></script>
 	<div class="am-content">
 	    <div class="am-list">
-	        <a href="#/svn_notes.txt">svn notes</a>
+	        <a href="/svn_notes.txt">svn notes</a>
+	        <a href="/git_notes.txt">git notes</a>
 	    </div>
 	</div>
 </body>
