Modify style for index.html

--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8" />
-	<title>dluter</title>
+	<title>Welcome!</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<style type="text/css">
 	a {
-		line-height: 1.5;
+		line-height: 2.2;
 	}
 	</style>
 </head>
-<body>
+<body bgcolor='d3d3d3'>
 	<script src="/public/jquery.min.js"></script>
 	<div class="am-content">
 	    <div class="am-list">
-	        <a href="/svn_notes.txt">svn notes</a>
-	        <a href="/git_notes.txt">git notes</a>
+	    	<p align="center" font>
+		    	<a href="/svn_notes.txt">svn notes</a>
+		    	<br>
+		        <a href="/git_notes.txt">git notes</a>
+	    	</p>
 	    </div>
 	</div>
 </body>
