--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 	<meta charset="utf-8" />
 	<title>Welcome!</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<style type="text/css">
-	a {
-		line-height: 2.2;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
-<body bgcolor='d3d3d3'>
+<body>
 	<script src="/public/jquery.min.js"></script>
-	<div class="am-content">
-	    <div class="am-list">
-	    	<p align="center" font>
-		    	<a href="/svn_notes.txt">svn notes</a>
+	<div class="notes">
+		<h3>All notes</h3>
+	    <div class="links">
+	    	<p>
+		    	<a class='no_underline' href="/svn_notes.txt">svn notes</a>
 		    	<br>
-		        <a href="/git_notes.txt">git notes</a>
+		        <a class='no_underline' href="/git_notes.txt">git notes</a>
 	    	</p>
 	    </div>
+	    <br>
 	</div>
+
+	<p class='right'>dawson dong</p>
 </body>
 </html>
