Add more content.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
-	<script src="/public/jquery.min.js"></script>
-	<div class="notes">
-		<h3>All notes</h3>
+	<div class="block">
+		<h3>notes</h3>
 	    <div class="links">
-	    	<p>
-		    	<a class='no_underline' href="/svn_notes.txt">svn notes</a>
-		    	<br>
-		        <a class='no_underline' href="/git_notes.txt">git notes</a>
+	    	<p class='indent1'>
+		    	<a class='no_underline' href="notes/svn_notes.txt">svn notes</a><br>
+		        <a class='no_underline' href="notes/git_notes.txt">git notes</a><br>
+		        <a class='no_underline' href="notes/sqlite_notes.txt">SQLite notes</a><br>
+		        <a class='no_underline' href="notes/vim_notes.txt">vim notes</a>
 	    	</p>
 	    </div>
-	    <br>
+	</div>
+	<br>
+
+	<div class="block">
+		<h3>commands</h3>
+	    <div class="links">
+	    	<p class='indent1'>
+		    	<a class='no_underline' href="commands/android_command.txt">android commands</a><br>
+		        <a class='no_underline' href="commands/linux_command.txt">linux commands</a>
+	    	</p>
+	    </div>
 	</div>
 
-	<p class='right'>dawson dong</p>
+	<div class='right'>
+		<a class='no_underline' href="mailto:dluter@gmail.com">dawson dong</a><br/>
+	</div>
 </body>
 </html>
